// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PromptConnectedStartTestingStep renders with device 1`] = `
<AndroidSetupStepLayout
  headerText="Connected and ready to go!"
  leftFooterButtonProps={
    Object {
      "onClick": [Function],
      "text": "Cancel",
    }
  }
  moreInfoLink={
    <LinkComponent
      href="https://aka.ms/accessibility-insights-for-android/otherDevice"
    >
      How do I connect a different device?
    </LinkComponent>
  }
  rightFooterButtonProps={
    Object {
      "disabled": false,
      "onClick": [Function],
      "text": "Start testing",
    }
  }
>
  <DeviceDescription
    className="deviceDescription"
    currentApplication="super-cool app"
    deviceInfo={
      Object {
        "id": "1",
        "isEmulator": false,
        "model": "Super-Duper Gadget",
      }
    }
  />
  <CustomizedDefaultButton
    data-automation-id="rescan"
    onClick={[Function]}
    text="Rescan devices"
  />
</AndroidSetupStepLayout>
`;

exports[`PromptConnectedStartTestingStep renders with emulator 1`] = `
<AndroidSetupStepLayout
  headerText="Connected and ready to go!"
  leftFooterButtonProps={
    Object {
      "onClick": [Function],
      "text": "Cancel",
    }
  }
  moreInfoLink={
    <LinkComponent
      href="https://aka.ms/accessibility-insights-for-android/otherDevice"
    >
      How do I connect a different device?
    </LinkComponent>
  }
  rightFooterButtonProps={
    Object {
      "disabled": false,
      "onClick": [Function],
      "text": "Start testing",
    }
  }
>
  <DeviceDescription
    className="deviceDescription"
    currentApplication="super-cool app"
    deviceInfo={
      Object {
        "id": "1",
        "isEmulator": true,
        "model": "Emulator Extraordinaire",
      }
    }
  />
  <CustomizedDefaultButton
    data-automation-id="rescan"
    onClick={[Function]}
    text="Rescan devices"
  />
</AndroidSetupStepLayout>
`;
